--- a/.github/workflows/ci-release.yml
+++ b/.github/workflows/ci-release.yml
@@ -12,8 +12,24 @@ permissions:
 
 jobs:
   build:
-    name: Build & Test
-    runs-on: ubuntu-latest
+    name: Build & Test (multi-platform)
+    strategy:
+      matrix:
+        include:
+          - os: ubuntu-latest
+            goos: linux
+            goarch: amd64
+            ext: ""
+          - os: windows-latest
+            goos: windows
+            goarch: amd64
+            ext: ".exe"
+          - os: macos-latest
+            goos: darwin
+            goarch: amd64
+            ext: ""
+
+    runs-on: ${{ matrix.os }}
 
     steps:
       - name: Checkout
@@ -30,16 +46,37 @@ jobs:
         run: go test ./...
 
       - name: Build binary
+        shell: bash
+        env:
+          GOOS: ${{ matrix.goos }}
+          GOARCH: ${{ matrix.goarch }}
         run: |
           mkdir -p build
-          go build -o build/codebase .
+
+          # Extract version from tag or use "dev"
+          VERSION="${GITHUB_REF#refs/tags/}"
+          if [[ ! "$VERSION" =~ ^v[0-9]+\.[0-9]+\.[0-9]+.*$ ]]; then
+            VERSION="dev"
+          fi
+
+          # Get git commit hash (short)
+          GIT_COMMIT=$(git rev-parse --short HEAD)
+
+          # Get build timestamp (RFC3339 format)
+          BUILD_TIME=$(date -u +"%Y-%m-%dT%H:%M:%SZ")
+
+          # Build with ldflags to inject version info
+          go build \
+            -ldflags="-X main.Version=${VERSION} -X main.GitCommit=${GIT_COMMIT} -X main.BuildTime=${BUILD_TIME}" \
+            -o build/codebase-${GOOS}-${GOARCH}${{ matrix.ext }} \
+            .
 
       - name: Upload artifact (for tagged builds)
         if: startsWith(github.ref, 'refs/tags/v')
         uses: actions/upload-artifact@v4
         with:
-          name: codebase-${{ github.ref_name }}-linux-amd64
-          path: build/codebase
+          name: codebase-${{ github.ref_name }}-${{ matrix.goos }}-${{ matrix.goarch }}
+          path: build/codebase-${{ matrix.goos }}-${{ matrix.goarch }}${{ matrix.ext }}
 
   release:
     name: Publish Release
@@ -51,11 +88,11 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Download built artifact
+      - name: Download built artifacts
         uses: actions/download-artifact@v4
         with:
-          name: codebase-${{ github.ref_name }}-linux-amd64
           path: dist
+          merge-multiple: true
 
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v2
