--- a/.github/workflows/ci-release.yml
+++ b/.github/workflows/ci-release.yml
@@ -24,11 +24,11 @@ jobs:
             goos: windows
             goarch: amd64
             ext: ".exe"
-          - os: macos-13
+          - os: macos-latest
             goos: darwin
             goarch: amd64
             ext: ""
-          - os: macos-14
+          - os: macos-latest
             goos: darwin
             goarch: arm64
             ext: ""
